package bioladen.customer;

import org.springframework.data.repository.CrudRepository;

import java.util.ArrayList;

public interface CustomerRepository extends CrudRepository<Customer, Long> {
	public ArrayList<Customer> findAll();

}
