package bioladen.customer;

public enum CustomerType {
	HOUSE_CUSTOMER,
	MAJOR_CUSTOMER,
	MANAGER,
	STAFF
}
